--- a/style.css
+++ b/style.css
@@ -1,8 +1,23 @@
-.Title {
+* {
+  box-sizing: border-box;
+  margin: 10px;
+}
+
+.boxA,
+.boxB {
+  font-size: xx-large;
+  margin: 30px;
+  border: 30px;
+  padding: 30px;
+  background-color: white;
   color: red;
-  background-color: whitesmoke;
-  font-weight: bold;
-  font-size: 36px;
-  font-family: Verdana, Tahoma, sans-serif;
-  align-items: center;
+}
+
+.boxB {
+  font-size: medium;
+  background-color: beige;
+}
+
+.image {
+  margin: 50px;
 }
